--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
           <groupId>com.smartbear.soapui</groupId>
           <artifactId>soapui-maven-plugin</artifactId>
           <version>5.6.0</version>
+          <dependencies>
+            <dependency>
+              <groupId>com.jgoodies</groupId>
+              <artifactId>forms</artifactId>
+              <version>1.2.1</version>
+            </dependency>
+          </dependencies>
           <configuration>
             <projectFile>resources/GraphicalWeather-soapui-project.xml</projectFile>
             <!-- Configuration example -->
